--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Sketchpad</title>
 </head>
 <body>
-
+    <div id="main-container">
+        
+    </div>
+    <script src="javascript.js"></script>
+    <script src="js2.js"></script>
 </body>
 </html>
