Centered etch a sketch canvas

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>Sketchpad</title>
 </head>
 <body>
-    <div id="main-container">
-        
-    </div>
+    <div class="header"></div>
+    <div class="container">
+        <div class="sidebar"></div>
+        <div id="main-container"></div>
+        <div class="sidebar"></div>
+    <div class="footer"></div>
     <script src="javascript.js"></script>
 </body>
 </html>
